@@ -1,0 +1,70 @@
+
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.031.
+use strict;
+use warnings;
+
+use 5.006;
+
+use ExtUtils::MakeMaker 6.17;
+
+
+
+my %WriteMakefileArgs = (
+  "ABSTRACT" => "a more sensible way to change directories",
+  "AUTHOR" => "David Golden <dagolden\@cpan.org>, Michael G. Schwern <schwern\@pobox.com>",
+  "CONFIGURE_REQUIRES" => {
+    "ExtUtils::MakeMaker" => "6.17"
+  },
+  "DISTNAME" => "File-chdir",
+  "EXE_FILES" => [],
+  "LICENSE" => "perl",
+  "MIN_PERL_VERSION" => "5.006",
+  "NAME" => "File::chdir",
+  "PREREQ_PM" => {
+    "Carp" => 0,
+    "Cwd" => "3.16",
+    "Exporter" => 0,
+    "File::Spec::Functions" => "3.27",
+    "strict" => 0,
+    "vars" => 0
+  },
+  "TEST_REQUIRES" => {
+    "ExtUtils::MakeMaker" => 0,
+    "File::Spec" => 0,
+    "Test::More" => 0,
+    "warnings" => 0
+  },
+  "VERSION" => "0.1010",
+  "test" => {
+    "TESTS" => "t/*.t"
+  }
+);
+
+
+my %FallbackPrereqs = (
+  "Carp" => 0,
+  "Cwd" => "3.16",
+  "Exporter" => 0,
+  "ExtUtils::MakeMaker" => "6.17",
+  "File::Spec" => 0,
+  "File::Spec::Functions" => "3.27",
+  "Test::More" => 0,
+  "strict" => 0,
+  "vars" => 0,
+  "warnings" => 0
+);
+
+
+unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
+  delete $WriteMakefileArgs{TEST_REQUIRES};
+  delete $WriteMakefileArgs{BUILD_REQUIRES};
+  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
+}
+
+delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
+  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
+
+WriteMakefile(%WriteMakefileArgs);
+
+
+
