@@ -1,37 +1,0 @@
-requires "Carp" => "0";
-requires "Cwd" => "3.16";
-requires "Exporter" => "0";
-requires "File::Spec::Functions" => "3.27";
-requires "perl" => "5.006";
-requires "strict" => "0";
-requires "vars" => "0";
-
-on 'test' => sub {
-  requires "ExtUtils::MakeMaker" => "0";
-  requires "File::Spec" => "0";
-  requires "Test::More" => "0";
-  requires "warnings" => "0";
-};
-
-on 'test' => sub {
-  recommends "CPAN::Meta" => "2.120900";
-};
-
-on 'configure' => sub {
-  requires "ExtUtils::MakeMaker" => "6.17";
-};
-
-on 'develop' => sub {
-  requires "Dist::Zilla" => "5";
-  requires "Dist::Zilla::PluginBundle::DAGOLDEN" => "0.068";
-  requires "File::Spec" => "0";
-  requires "File::Temp" => "0";
-  requires "IO::Handle" => "0";
-  requires "IPC::Open3" => "0";
-  requires "Pod::Coverage::TrustPod" => "0";
-  requires "Test::CPAN::Meta" => "0";
-  requires "Test::More" => "0";
-  requires "Test::Pod" => "1.41";
-  requires "Test::Pod::Coverage" => "1.08";
-  requires "Test::Spelling" => "0.12";
-};
