@@ -5,6 +5,5 @@ license = Perl_5
 copyright_holder = Michael G. Schwern and David Golden
 
 [@DAGOLDEN]
-:version = 0.068
-github_issues = 0
+:version = 0.072
 stopwords = Warnock
