@@ -3,7 +3,8 @@ use 5.004;
 use strict;
 use vars qw($VERSION @ISA @EXPORT $CWD @CWD);
 # ABSTRACT: a more sensible way to change directories
-# VERSION
+
+our $VERSION = '0.1010';
 
 require Exporter;
 @ISA = qw(Exporter);
