@@ -2,6 +2,10 @@ Changes for File-chdir
 
 {{ $NEXT }}
 
+    [Changed]
+
+    - Updated distribution metadata and repo layout
+
 0.1009    2014-09-23 12:24:11-04:00 America/New_York
 
     [Changed]
